# pastemc

./: .config.example.yaml  .gitignore  .markdownlint.yml  LICENSE  README.md  pyproject.toml
pastemc/: main.py
pastemc/models/: common.py  minio.py  settings.py
pastemc/modules/: fetch.py  upload.py
pastemc/utils/: s3api.py
